plugins {
    id 'java-library'
}

base {
    archivesName = "${rootProject.archives_name}-common"
}

java {
    // Java 17 bytecode so 1.20.1 (Java 17) and newer loaders can all load :common classes.
    toolchain.languageVersion = JavaLanguageVersion.of(17)
    withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 17
}

dependencies {
    // Minecraft loaders already ship Gson at runtime; compileOnly keeps common jar lean.
    compileOnly 'com.google.code.gson:gson:2.11.0'
    compileOnly 'org.slf4j:slf4j-api:2.0.16'
    testImplementation 'com.google.code.gson:gson:2.11.0'
    testImplementation 'org.slf4j:slf4j-simple:2.0.16'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
}

tasks.named('processResources', ProcessResources).configure {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
